# PAC

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
conhecimento/: index.html
conhecimento/materiais-de-apoio/: index.html
conhecimento/perguntas-frequentes/: index.html
conhecimento/sobre-o-pac/: index.html
docs/: index.md
docs/conhecimento/: index.md  materiais-de-apoio.md  perguntas-frequentes.md  sobre-o-pac.md
docs/pac-2026/: base-de-dados.md  index.md  sobre-a-revisao.md
pac-2026/: index.html
pac-2026/base-de-dados/: index.html
pac-2026/sobre-a-revisao/: index.html
search/: search_index.json
site/: index.html
site/conhecimento/materiais-de-apoio/: index.html
site/conhecimento/perguntas-frequentes/: index.html
site/conhecimento/sobre-o-pac/: index.html
site/search/: search_index.json
