[tool.poetry]

name = "pac"
version = "0.1.0"
description = ""
authors = ["dpgffhemig <dpgffhemig@mg.gov.br>"]
readme = "README.md"

# ⬇️ desativa a instalação do "pac" como pacote
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6"
mkdocs-material = "^9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

